# mnemos

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PACKAGING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop.yml  release.yml
adapters/antigravity-cli/: README.md  mcp_config.json
adapters/claude-code/: CLAUDE.md.fragment  README.md  claude_mcp_config.json
adapters/codex/: README.md  codex.config.json
adapters/gemini-cli/: README.md
adapters/generic-mcp/: README.md  client.example.ts
adapters/hermes-agent/: README.md  hermes_mnemos.py
adapters/openai-functions/: README.md  schema.json
adapters/openclaw/: README.md  openclaw-wrapper.sh
crates/mnemos_cli/: Cargo.toml
crates/mnemos_cli/src/: cli.rs  daemon_ctl.rs  main.rs  transcript.rs
crates/mnemos_cli/src/commands/: daemon.rs  decay.rs  doctor.rs  embed.rs  embed_rebuild.rs  export.rs  forget.rs  get.rs  hook.rs  import.rs  list.rs  mod.rs  rebuild.rs  recall.rs  remember.rs  service.rs  status.rs  sync.rs
crates/mnemos_cli/tests/: cli_admin.rs  cli_daemon.rs  cli_embed.rs  cli_get_list_forget.rs  cli_recall.rs  cli_recall_hybrid.rs  cli_remember.rs  hook_session_end.rs
crates/mnemos_client/: Cargo.toml
crates/mnemos_client/src/: error.rs  lib.rs  transport.rs
crates/mnemos_client/tests/: client.rs
crates/mnemos_core/: Cargo.toml
crates/mnemos_core/src/: correction.rs  doctor.rs  embedder_rebuild.rs  error.rs  file_io.rs  frontmatter.rs  id.rs  lib.rs  paths.rs  rebuild.rs  tier.rs  types.rs  vault.rs  watcher.rs
crates/mnemos_core/src/graph/: build.rs  community.rs  mod.rs  ppr.rs
crates/mnemos_core/src/pipeline/: co_mention.rs  community.rs  decay.rs  entities.rs  extract.rs  graph.rs  index_log.rs  lint.rs  mod.rs  reflect.rs  resolve.rs
crates/mnemos_core/src/providers/: bundled.rs  mock.rs  mock_llm.rs  mod.rs  ollama.rs  ollama_llm.rs  onnx_reranker.rs  openai_embedder.rs  openai_llm.rs
crates/mnemos_core/src/retrieval/: bm25.rs  dense.rs  graph_recall.rs  hybrid.rs  mod.rs  rerank.rs  reweight.rs  rrf.rs
crates/mnemos_core/src/storage/: audit.rs  chunk_ops.rs  community_ops.rs  entity_ops.rs  memory_ops.rs  migrations.rs  mod.rs  reflection_ops.rs  vault_meta.rs  vec_ops.rs
crates/mnemos_core/src/sync/: filesystem.rs  git.rs  mod.rs  s3.rs  state.rs
crates/mnemos_core/tests/: audit_log.rs  backfill.rs  bi_temporal.rs  bm25_retrieval.rs  bundled_embedder.rs  community_ops.rs  correction_harden.rs  correction_mine.rs  correction_vault.rs  dense_retrieval.rs  dim_mismatch.rs  doctor.rs  embed_rebuild.rs  embedder_trait.rs  entity_ops.rs  error_display.rs  file_io.rs  frontmatter_roundtrip.rs  fts_cleanup.rs  graph_build.rs  graph_recall.rs  hybrid_graph_fusion.rs  hybrid_retrieval.rs  id.rs  index_log.rs  memory_insert.rs  memory_list.rs  migration_atomic.rs  ollama_embedder.rs  openai_embedder.rs  openai_llm.rs  p1_perf.rs  paths.rs  pipeline_community.rs  pipeline_decay.rs  pipeline_entities.rs  pipeline_graph.rs  pipeline_memory_ops.rs  pipeline_reflect.rs  pipeline_resolve.rs  (+28 more)
crates/mnemos_daemon/: Cargo.toml  build.rs
crates/mnemos_daemon/src/: auth.rs  bundled_embedder.rs  bundled_llm.rs  config.rs  error.rs  events.rs  lib.rs  llm.rs  main.rs  pid.rs  pipeline_runner.rs  pipeline_status.rs  session_manager.rs  state.rs  sync_worker.rs
crates/mnemos_daemon/src/connectors/: descriptors.rs  detect.rs  edits.rs  mod.rs
crates/mnemos_daemon/src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs
crates/mnemos_daemon/src/routes/: communities.rs  config.rs  connectors.rs  corrections.rs  doctor.rs  embed_rebuild.rs  entities.rs  firstrun.rs  graph.rs  health.rs  memories.rs  mod.rs  pipelines.rs  recall_helper.rs  reflections.rs  sessions.rs  sync.rs  vault.rs  working.rs  ws.rs
crates/mnemos_daemon/tests/: auth.rs  autonomy_capture.rs  bundled_embedder.rs  communities_endpoint.rs  config.rs  config_endpoint.rs  connectors_api.rs  corrections_api.rs  doctor.rs  embed_rebuild.rs  entities.rs  entities_and_working.rs  firstrun.rs  graph_endpoint.rs  health.rs  mcp.rs  mcp_correct.rs  mcp_resources.rs  mcp_stdio.rs  memories.rs  pid.rs  pipeline_e2e.rs  pipeline_runner.rs  pipelines.rs  reflection_trigger.rs  reflections.rs  reranker_wiring.rs  serve.rs  sessions.rs  sync.rs  vault_export.rs  ws.rs
crates/mnemos_merge_driver/: Cargo.toml
crates/mnemos_merge_driver/src/: main.rs
crates/mnemos_release_manifest/: Cargo.toml
crates/mnemos_release_manifest/src/: main.rs
crates/mnemos_release_manifest/tests/: manifest.rs
desktop/: .eslintrc.cjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/src/: App.test.tsx  App.tsx  main.tsx  router.tsx
desktop/src-tauri/: Cargo.toml  build-sidecars.sh  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  config_io.rs  daemon.rs  main.rs  vault_move.rs
desktop/src-tauri/tests/: move_cycle.rs
desktop/src/api/: client.test.ts  client.ts  queries.ts  tauri.ts  token.ts  types.ts  ws.ts
desktop/src/components/: CodeMirror.tsx  CommandPalette.test.tsx  CommandPalette.tsx  EntityNeighborhood.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GraphCanvas.tsx  MergeDialog.test.tsx  MergeDialog.tsx  ModelPicker.tsx  QuickAdd.test.tsx  QuickAdd.tsx  RankBars.tsx  SyncStatusPill.test.tsx  SyncStatusPill.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  VaultIO.tsx
desktop/src/design/: ThemeProvider.tsx  primitives.test.tsx  primitives.tsx  theme.ts  tokens.css
desktop/tests-e2e/: golden.spec.ts  screenshots.spec.ts
docs/superpowers/: prod-readiness-backlog-2026-06-04.md
packaging/systemd/: mnemosd.service  mnemosd.socket
scripts/: fetch-bundled-assets.sh  gen-updater-key.sh  llama-server-wrapper.sh  package-linux.sh  prepare-linux-packages.sh
(+66 files in other folders)
