[workspace]
resolver = "2"
members = [
    "crates/mnemos_core",
    "crates/mnemos_cli",
    "crates/mnemos_daemon",
    "crates/mnemos_client",
    "crates/mnemos_merge_driver",
    "crates/mnemos_release_manifest",
]

[workspace.package]
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Shaun Jones <sjones@armellini.com>"]
repository = "https://github.com/UnpaidAttention/mnemos"
homepage = "https://github.com/UnpaidAttention/mnemos"
description = "Local-first AI memory provider"
rust-version = "1.78"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "signal", "process"] }

# Database
libsql = { version = "0.5", default-features = false, features = ["core", "serde"] }
libsql-sys = "0.7"
sqlite-vec = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Errors + logs
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
directories = "5"

# File watching
notify = "6"
notify-debouncer-full = "0.3"

# Async traits
async-trait = "0.1"

# HTTP server + middleware
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "auth", "limit"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
http-body-util = "0.1"
toml = "0.8"
rand = "0.8"
futures = "0.3"
url = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"

# Unix process utilities
libc = "0.2"

# Hashing
sha2 = "0.11"

# Executable path resolution
which = "6"

# Directory traversal
walkdir = "2"

# Zip archives (vault export/import)
zip = { version = "2", default-features = false, features = ["deflate"] }

# ONNX reranker (optional; pulled in only with feature rerank-onnx)
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
tokenizers = "0.20"
ndarray = "0.16"

# Test helpers
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
