[package]
name = "mnemos_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mnemos"
path = "src/main.rs"

[dependencies]
mnemos_core = { path = "../mnemos_core" }
mnemos_client = { path = "../mnemos_client" }
mnemos_daemon = { path = "../mnemos_daemon" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
