[package]
name = "mnemos_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Mnemos CLI — local-first AI memory provider command-line interface"

[[bin]]
name = "mnemos"
path = "src/main.rs"

[dependencies]
mnemos_core = { path = "../mnemos_core" }
mnemos_client = { path = "../mnemos_client" }
mnemos_daemon = { path = "../mnemos_daemon" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
which = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[package.metadata.deb]
maintainer = "Mnemos contributors"
copyright = "2026, Mnemos contributors"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Mnemos CLI — local-first AI memory provider. The `mnemos` binary lets you
remember, recall, list, forget, rebuild, sync, and diagnose without the
desktop app or daemon. For the full GUI, install mnemos-desktop instead.
"""
section = "utils"
priority = "optional"
depends = ""
assets = [
    ["target/release/mnemos", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/mnemos/README", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/mnemos/CHANGELOG", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mnemos", dest = "/usr/bin/mnemos", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/mnemos/README", mode = "644", doc = true },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/mnemos/CHANGELOG", mode = "644", doc = true },
]
