[package]
name = "mnemos_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
libsql = { workspace = true }
libsql-sys = { workspace = true }
sqlite-vec = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
directories = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }

[features]
# ONNX-based reranker (bge-reranker-base); populated in Task 12.
rerank-onnx = []

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
