[package]
name = "mnemos_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
libsql = { workspace = true }
libsql-sys = { workspace = true }
sqlite-vec = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
directories = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

# Optional: ONNX reranker (feature: rerank-onnx)
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[features]
default = []
# ONNX-based reranker (bge-reranker-base).
rerank-onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
