[package]
name = "mnemos_daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mnemosd"
path = "src/main.rs"

[[bin]]
name = "mnemos-mcp-stdio"
path = "src/bin/mnemos_mcp_stdio.rs"

[features]
default = []
rerank-onnx = ["mnemos_core/rerank-onnx"]

[dependencies]
reqwest = { workspace = true }
mnemos_core = { path = "../mnemos_core" }
libsql = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio-tungstenite = "0.24"
futures = { workspace = true }

[package.metadata.deb]
name = "mnemos-daemon"
maintainer = "Mnemos contributors"
copyright = "2026, Mnemos contributors"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Mnemos daemon — the local HTTP + MCP server for the Mnemos memory
provider. Listens on 127.0.0.1:7423 by default and exposes the REST + WS
API plus the MCP streamable HTTP endpoint used by Claude Code, Codex,
and other AI clients.
"""
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/mnemosd", "usr/bin/mnemos-daemon", "755"],
    ["../../README.md", "usr/share/doc/mnemos-daemon/README", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/mnemos-daemon/CHANGELOG", "644"],
]
