[workspace]

[package]
name = "mnemos-desktop"
version = "0.6.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
